--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daily Pkg</title>
+  <style>
+    table {
+      border-collapse: collapse;
+    }
+    th, td {
+      padding: 2px 6px;
+      border: 1px solid #000;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <h1>Daily Pkg</h1>
+  <table class="dp-table">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Name</th>
+        <th>Version</th>
+        <th>Description</th>
+        <th>Use related</th>
+        <th>Peculiarity</th>
+        <th>Tags</th>
+      </tr>
+    </thead>
+
+    <tbody class="dp-tbody">
+      <tr>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <script src="./index.js"></script>
 </body>
 </html>
