chore: local dependence

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <script type="importmap">
     {
       "imports": {
-        "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
+        "vue": "./lib/vue.esm-browser.js"
       }
     }
   </script>
   <!-- unocss -->
-  <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime/attributify.global.js"></script>
+  <script src="./lib/unocss.attributify.global.js"></script>
 
 </head>
 <body>
